--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
@@ -2,8 +2,8 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUIMobileStarterKit.Screens.CanyoningPageScreens.ResumeCanyonScreen">
-    <ScrollView>
-        <StackLayout Margin="0,20,0,0" Padding="10">
+    <ScrollView x:Name="scrollView" BackgroundColor="Yellow" HeightRequest="650">
+        <StackLayout Margin="0,20,0,0" Padding="10" >
             <VerticalStackLayout Spacing="10">
                 <Button x:Name="ButtonAskForChange" Text="Update Canyon" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
                 <Grid ColumnDefinitions="Auto,*" RowDefinitions="*,*,*,*,*,*,*,*" HorizontalOptions="CenterAndExpand" >
@@ -32,15 +32,109 @@
 
                 </Grid>
             </VerticalStackLayout>
-
             <Frame Padding="10" BorderColor="Red" Margin="0,30,0,0"  BackgroundColor="Transparent" WidthRequest="200">
                 <HorizontalStackLayout VerticalOptions="Center" HorizontalOptions="CenterAndExpand">
                     <Image Aspect="AspectFit" Source="desescalade.png" />
                     <Label VerticalOptions="Center" Text="Warning" FontSize="15" FontAttributes="Italic" TextColor="#00B4D8" FontFamily="CabinBold"/>
                 </HorizontalStackLayout>
             </Frame>
+            <Grid RowSpacing="0" x:Name="gridView" RowDefinitions="*,*,*,*,*,*" ColumnDefinitions="*,*" ColumnSpacing="0" >
+                <HorizontalStackLayout Grid.Row="0" Grid.Column="0">
+                    <Image Margin="10,15,5,15"  Aspect="AspectFit" Source="starblue.png"/>
+                    <StackLayout Spacing="0"   VerticalOptions="CenterAndExpand">
+                        <Label  Text="Note"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label x:Name="noteCanyon" Text="3.5/4"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
+                    </StackLayout>
+                </HorizontalStackLayout>
 
-                
+                <HorizontalStackLayout Grid.Row="0" Grid.Column="1">
+                    <Image Margin="10,15,5,15" Aspect="AspectFit" Source="cotation.png"/>
+                    <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
+                        <Label  Text="Cotation"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label x:Name="cotationCanyon" Text="v4A12"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
+                    </StackLayout>
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout Grid.Row="1" Grid.Column="0">
+                    <Image Margin="10,15,5,15" Aspect="AspectFit" Source="corde.png"/>
+                    <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
+                        <Label  Text="Rope"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label x:Name="cordeCanyon" Text="120m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
+                    </StackLayout>
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout Grid.Row="1" Grid.Column="1">
+                    <Image Margin="10,15,5,15" Aspect="AspectFit" Source="cascade.png"/>
+                    <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
+                        <Label  Text="WaterfallMax"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label x:Name="cascademaxCanyon" Text="132m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14" />
+                    </StackLayout>
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout Grid.Row="2" Grid.Column="0">
+                    <Image Margin="10,15,5,15" Aspect="AspectFit" Source="montagne.png"/>
+                    <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
+                        <Label  Text="StartAltitude"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label x:Name="altitudeCanyon" Text="1220m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
+                    </StackLayout>
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout Grid.Row="2" Grid.Column="1">
+                    <Image Margin="10,15,5,15" Aspect="AspectFit" Source="metre.png"/>
+                    <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
+                        <Label  Text="LenghtCanyon"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label x:Name="longueurCanyon" Text="1220m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
+                    </StackLayout>
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout  Grid.Row="3" Grid.Column="0">
+                    <Image Margin="10,15,5,15"  Aspect="AspectFit" Source="denivele.png"/>
+                    <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
+                        <Label  Text="Denivele"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label x:Name="denivCanyon" Text="220m" FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
+                    </StackLayout>
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout  Grid.Row="3" Grid.Column="1">
+                    <Image Margin="10,15,5,15" Aspect="AspectFit" Source="marche.png"/>
+                    <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
+                        <Label  Text="Approche"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label x:Name="approcheCanyon" Text="00h20"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
+                    </StackLayout>
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout  Grid.Row="4" Grid.Column="0">
+                    <Image Margin="10,15,5,15" Aspect="AspectFit" Source="descenteActif.png"/>
+                    <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
+                        <Label  Text="Descent"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label x:Name="descentCanyon" Text="220m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
+                    </StackLayout>
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout  Grid.Row="4" Grid.Column="1">
+                    <Image Margin="10,15,5,15" Aspect="AspectFit" Source="retour.png"/>
+                    <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
+                        <Label  Text="Retour"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label x:Name="retourCanyon" Text="220m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
+                    </StackLayout>
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout  Grid.Row="5" Grid.Column="0">
+                    <Image Margin="10,15,5,15" Aspect="AspectFit" Source="voiture.png"/>
+                    <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
+                        <Label  Text="Navette" FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label x:Name="navetteCanyon" Text="220m"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
+                    </StackLayout>
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout Grid.Row="5" Grid.Column="1">
+                    <Image Margin="10,15,5,15" Aspect="AspectFit" Source="obstacles.png"/>
+                    <StackLayout Spacing="0" VerticalOptions="CenterAndExpand">
+                        <Label  Text="Obstacles"  FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                        <Label x:Name="obstacleCanyon"  Text="-"  FontFamily="CabinRegular" FontAttributes="Italic"  TextColor="#0077B6" FontSize="14"/>
+                    </StackLayout>
+                </HorizontalStackLayout>
+            </Grid>
         </StackLayout>
     </ScrollView>
 </ContentView>
