--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
@@ -2,12 +2,12 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUIMobileStarterKit.Screens.CanyoningPageScreens.ResumeCanyonScreen">
-    <ScrollView x:Name="scrollView" BackgroundColor="Yellow" HeightRequest="650">
+    <ScrollView x:Name="scrollView"  HeightRequest="650">
         <StackLayout Margin="0,20,0,0" Padding="10" >
             <VerticalStackLayout Spacing="10">
                 <Button x:Name="ButtonAskForChange" Text="Update Canyon" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
                 <Grid ColumnDefinitions="Auto,*" RowDefinitions="*,*,*,*,*,*,*,*" HorizontalOptions="CenterAndExpand" >
-                    <Label TextColor="#0077B6" Grid.Column="0" Grid.Row="0" VerticalOptions="CenterAndExpand" HorizontalTextAlignment="Center" FontSize="15" FontAttributes="Bold" TextDecorations="Underline" Text="Name Canyon" />
+                    <Label TextColor="#0077B6" Grid.Column="0" Grid.Row="0" VerticalOptions="CenterAndExpand"   FontSize="15" FontAttributes="Bold" TextDecorations="Underline" Text="Name Canyon" />
                     <Button Grid.Column="1" Grid.Row="0" Text="Modify" HorizontalOptions="CenterAndExpand" BackgroundColor="#00B4D8" CornerRadius="5" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
                     <Label Margin="0,20,0,0" Grid.Column="0" Grid.Row="1" Text="Country" FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
                     <Label Margin="0,20,0,0" Grid.Column="1" Grid.Row="1" x:Name="countryCanyon" TextColor="#00B4D8" VerticalOptions="Center" HorizontalOptions="Start" FontSize="14" Text="Nouvelle-Zélande"/>
@@ -135,6 +135,96 @@
                     </StackLayout>
                 </HorizontalStackLayout>
             </Grid>
+            <Frame Padding="10" BorderColor="Red" Margin="0,30,0,0"  BackgroundColor="Transparent" WidthRequest="200">
+                <HorizontalStackLayout VerticalOptions="Center" HorizontalOptions="CenterAndExpand">
+                    <Image Aspect="AspectFit" Source="desescalade.png" />
+                    <Label VerticalOptions="Center" Text="Translate" FontSize="15" FontAttributes="Italic" TextColor="#00B4D8" FontFamily="CabinBold"/>
+                </HorizontalStackLayout>
+            </Frame>
+            <Frame Padding="5,0" BorderColor="Transparent" BackgroundColor="Transparent" CornerRadius="5" VerticalOptions="FillAndExpand" HeightRequest="300">
+
+                <ListView x:Name="commentListView" HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None"  ItemsSource="{Binding CanyonCommentList}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <StackLayout Margin="0,5">
+                                    <Frame Padding="0,0,5,0" BorderColor="Transparent" CornerRadius="5"  HasShadow="False" BackgroundColor="#90E0EF" >
+                                        <Grid Padding="10" ColumnDefinitions="*,*" RowDefinitions="*,*,*,*,*,*">
+                                            <VerticalStackLayout Spacing="5" Grid.Row="0" Grid.Column="0">
+                                                <Label Text="Access:" TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="{Binding Acces}" VerticalOptions="Center" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
+                                            </VerticalStackLayout>
+
+                                            <VerticalStackLayout Spacing="5" Grid.Row="0" Grid.Column="1">
+                                                <Label Text="Approche:"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="{Binding Approche}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
+                                            </VerticalStackLayout>
+
+                                            <VerticalStackLayout Spacing="5" Grid.Row="1" Grid.Column="0">
+                                                <Label Text="Descent"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="{Binding Descente}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
+                                            </VerticalStackLayout>
+
+                                            <VerticalStackLayout Spacing="5" Grid.Row="1" Grid.Column="1">
+                                                <Label Text="Retour"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="{Binding Retour}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
+                                            </VerticalStackLayout>
+
+                                            <VerticalStackLayout Spacing="5" Grid.Row="2" Grid.Column="0" >
+                                                <Label Text="Engagement" LineBreakMode="WordWrap"  TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label WidthRequest="100" Text="{Binding Engagement}" HorizontalOptions="StartAndExpand" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
+                                            </VerticalStackLayout>
+
+                                            <VerticalStackLayout Spacing="5" Grid.Row="2" Grid.Column="1">
+                                                <Label Text="Historique"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="{Binding Historique}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
+                                            </VerticalStackLayout>
+
+                                            <VerticalStackLayout Spacing="5" Grid.Row="3" Grid.Column="0">
+                                                <Label Text="Remarque"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="{Binding Remarque}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
+                                            </VerticalStackLayout>
+
+                                            <VerticalStackLayout Spacing="5" Grid.Row="3" Grid.Column="1">
+                                                <Label Text="Geologie"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="{Binding Geologie}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
+                                            </VerticalStackLayout>
+
+                                            <VerticalStackLayout Spacing="5" Grid.Row="4" Grid.Column="0">
+                                                <Label Text="Periode"   TextColor="#03045E" FontFamily="CabinBold" FontSize="15" TextDecorations="Underline"/>
+                                                <Label Text="{Binding Periode}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
+                                            </VerticalStackLayout>
+                                        </Grid>
+                                    </Frame>
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+
+            </Frame>
+
+            <Frame Padding="5,0" BorderColor="Transparent" BackgroundColor="Transparent" CornerRadius="5" VerticalOptions="FillAndExpand" HeightRequest="300">
+                <ListView x:Name="sourceUserListView" ItemsSource="{Binding UserCreatorList}" SeparatorVisibility="None" SelectionMode="None" HasUnevenRows="True">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <StackLayout Margin="0,5">
+                                    <Frame Padding="0" BorderColor="Transparent" CornerRadius="5"  HasShadow="False" BackgroundColor="#90E0EF">
+                                        <StackLayout  Padding="10">
+                                            <Label Text="Creator" TextColor="#03045E" FontFamily="CabinBold" FontSize="15" FontAttributes="Bold" TextDecorations="Underline"/>
+                                            <Label Text="{Binding UserCreatorName}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
+                                            <Label Text="Source"  TextColor="#03045E" FontFamily="CabinBold" FontSize="15" FontAttributes="Bold" TextDecorations="Underline"/>
+                                            <Label Text="{Binding Source}" TextColor="#03045E" FontFamily="CabinRegular" FontSize="15"/>
+                                        </StackLayout>
+                                    </Frame>
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Frame>
+            <Label Text="@CanyonProject" TextColor="Black" FontSize="15" FontAttributes="Bold" FontFamily="CabinBold"/>
         </StackLayout>
     </ScrollView>
 </ContentView>
