--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/CanyonMapScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/CanyonMapScreen.xaml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:maps="clr-namespace:Maui.GoogleMaps;assembly=Maui.GoogleMaps" BackgroundColor="Green"
              x:Class="MAUIMobileStarterKit.Screens.CanyoningPageScreens.CanyonMapScreen">
-    <VerticalStackLayout>
-        <Label 
-            Text="Cannyon Map Screen"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <StackLayout>
+        <maps:Map MyLocationEnabled="True"  VerticalOptions="FillAndExpand" x:Name="mapView" />
+
+    </StackLayout>
 </ContentView>
