--- a/MAUIMobileStarterKit/Screens/HomePageScreens/SearchCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/HomePageScreens/SearchCanyonScreen.xaml
@@ -21,7 +21,7 @@
            </Frame>
             <Button Margin="10,0" Text="Create Canyon" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
             <Frame Padding="5,0" BorderColor="Transparent" BackgroundColor="Transparent" CornerRadius="5" VerticalOptions="FillAndExpand" HeightRequest="300">
-                <ListView ItemsSource="{Binding LivingExpenses}" HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None" >
+                <ListView ItemsSource="{Binding CannyonDetails}" HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None" ItemTapped="CannyonItemTapped" >
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
