--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/TabbedPicturesCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/TabbedPicturesCanyonScreen.xaml
@@ -2,10 +2,9 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUIMobileStarterKit.Screens.CanyoningPageScreens.TabbedPicturesCanyonScreen">
-    <VerticalStackLayout>
-        <Label 
-            Text="Tabbed picture Screen"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <StackLayout Padding="10" Spacing="10">
+        <Label x:Name="NotAvailable" IsVisible="True" Text="Sorry, this fonctionnality will be available in the next version of the app." HorizontalTextAlignment="Center" FontFamily="CabinBold"  TextColor="#03045E" FontSize="15" TextDecorations="Underline"/>
+        <Image x:Name="Takephotoimage" HeightRequest="400" BackgroundColor="LightGray" />
+        <Button Text="Add picture" Clicked="CameraBtnClicked" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
+    </StackLayout>
 </ContentView>
