--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/TopoCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/TopoCanyonScreen.xaml
@@ -14,10 +14,10 @@
                                 <StackLayout  Margin="0,5" >
                                     <Frame Padding="0,0,5,0" BorderColor="Transparent" CornerRadius="5"  HasShadow="False" BackgroundColor="#90E0EF" >
                                         <Grid RowDefinitions="Auto" ColumnDefinitions="Auto,*" ColumnSpacing="10" >
-                                            <Image  WidthRequest="180" BackgroundColor="LightGrey" Aspect="AspectFill" Grid.Row="0" Grid.Column="0"/>
+                                            <Image Source="https://fastly.picsum.photos/id/54/3264/2176.jpg?hmac=blh020fMeJ5Ru0p-fmXUaOAeYnxpOPHnhJojpzPLN3g" WidthRequest="180" BackgroundColor="LightGrey" Aspect="AspectFill" Grid.Row="0" Grid.Column="0"/>
                                             <VerticalStackLayout  Grid.Row="0" Grid.Column="1" Padding="0,5">
                                                 <VerticalStackLayout>
-                                                    <Image HeightRequest="100" BackgroundColor="LightGrey" Aspect="AspectFill"  />
+                                                    <Image Source="https://fastly.picsum.photos/id/55/4608/3072.jpg?hmac=ahGhylwdN52ULB37deeMZX6T_G7NiERtoPhwydMvUKQ" HeightRequest="100" BackgroundColor="LightGrey" Aspect="AspectFill"  />
                                                     <Label Text="{Binding TypeObstacle}" FontFamily="CabinBold" TextColor="#03045E" FontSize="15" FontAttributes="Bold"/>
                                                 </VerticalStackLayout>
                                                 <VerticalStackLayout>
