--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ReglementationCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ReglementationCanyonScreen.xaml
@@ -8,7 +8,7 @@
             <Label Text="Sorry, in this section there is no translation in your language." HorizontalTextAlignment="Center" FontFamily="CabinBold"  TextColor="#03045E" FontSize="15" />
             <Label Text="Currently, it seems there is no specific reglementation on this canyon. Check on other website if it's still true, if you find information please add a reglementation it will be check by administrator." HorizontalTextAlignment="Center" FontFamily="CabinBold"  TextColor="#03045E" FontSize="15" />
             <VerticalStackLayout >
-                <Image Margin="10,15,5,15" Aspect="AspectFit" Source="Desescalade.png"/>
+                <Image Margin="10,15,5,15" Aspect="AspectFit" Source="desescalade.png"/>
             <ListView RowHeight="100" SelectionMode="None" ItemsSource="{Binding ReglementationsList}"
              HasUnevenRows="True">
                     <ListView.ItemTemplate>
