--- a/MAUIMobileStarterKit/Screens/FlyoutPanelScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/FlyoutPanelScreen.xaml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <FlyoutPage  xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             IsVisible="false"
+             x:Name ="flyoutContentPage"
              x:Class="MAUIMobileStarterKit.Screens.FlyoutPanelScreen">
     <FlyoutPage.Flyout>
         <ContentPage Title="menu" >
