--- a/MAUIMobileStarterKit/Screens/HomePageScreens/SearchCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/HomePageScreens/SearchCanyonScreen.xaml
@@ -14,11 +14,27 @@
             <Frame Padding="0"  BorderColor="#00B4D8" CornerRadius="5" VerticalOptions="FillAndExpand">
                 <VerticalStackLayout Spacing="20" Padding="10,20,10,10">
                     <local:FlatingLabel Title="Country" x:Name="contryEntry" />
+
                     <local:FlatingLabel Title="Region" x:Name="regionEntry"/>
+                    <Picker x:Name="regionPicker" IsVisible="False" />
                     <local:FlatingLabel Title="State" x:Name="stateEntry"/>
+                    <Picker x:Name="statePicker" IsVisible="False" />
                     <Button Text="Search" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15"/>
                 </VerticalStackLayout>
            </Frame>
+            <Picker x:Name="countryPicker" ItemsSource="{Binding CountryList}">
+                <!--<Picker.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>Baboon</x:String>
+                        <x:String>Capuchin Monkey</x:String>
+                        <x:String>Blue Monkey</x:String>
+                        <x:String>Squirrel Monkey</x:String>
+                        <x:String>Golden Lion Tamarin</x:String>
+                        <x:String>Howler Monkey</x:String>
+                        <x:String>Japanese Macaque</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>-->
+            </Picker>
             <Button Margin="10,0" Text="Canyons to validate" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
             <Button Margin="10,0" Text="Create Canyon" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
 
@@ -66,6 +82,7 @@
             </Frame>
 
             <maps:Map MyLocationEnabled="True"  VerticalOptions="FillAndExpand" x:Name="mapView" HeightRequest="400"/>
+            
         </StackLayout>
     </ScrollView>
 </ContentView>
